appId: com.skvaccineapplicationproject.skvaccineapp
---
- launchApp
- assertVisible: "Clinic Info"
- assertVisible: "Vaccine Info"
- assertVisible: "Your Closest Clinic"
- assertVisible: "Our Neighbourhood Health Centre"
- tapOn: "Clinic Info"# tapping on clinic info button
- assertVisible: "Search"#search is present
  # testing the search bar
- tapOn: "Search"
- inputText: "Balcarres"
- pressKey: Enter
- assertVisible: "Balcarres Integrated Care Centre"
- assertNotVisible: "Beauval Health Centre"
- assertNotVisible: "Beechy Health Care"
- tapOn: "Search"
- eraseText
- pressKey: Enter
- assertVisible: "Balcarres Integrated Care Centre"
- assertVisible: "Beauval Health Centre"
- assertVisible: "Beechy Health Care"
- assertVisible: "100 Elgin St Balcarres SK S0G 0C0"
- assertVisible: "Lavoie St."
- back
# testing search bar
- tapOn: "Vaccine Info"
- assertVisible: "Search"
- assertVisible: "DTaP-IPV-Hib"
- tapOn: "Search"
- inputText: "DTap"
- assertVisible: "DTaP-IPV-Hib"
- back
- tapOn: "Your Closest Clinic"
- assertVisible: "Search"
- assertVisible: "DTaP-IPV-Hib"
- back
# testing the pdf for the vaccines
- tapOn: "Vaccine Info"
- tapOn: "Rotavirus"
- assertVisible: "Starting Age/Grade"
- assertVisible: "HealthLine"
- assertVisible: "Rotavirus Vaccine"
- back
- tapOn: "Pneumococcal Conjugate 15"
- assertVisible: "Starting Age/Grade"
- assertVisible: "Saskatchewan"
- back
- back
- tapOn: "Clinic Info"
- tapOn: "Beauval Health Centre"
- assertVisible: "Contact Info"
- assertVisible: "Vaccination Services"
- assertVisible: "Hours of Operation"
- assertVisible: "Clinic Location"
  # making sure map opens correctly
- tapOn: "View larger map"
- assertVisible: "Open now"
- assertVisible: "5.0"